# Evolutionary-Minority-Game

./: Agents and Evolution Strategies.cpp  Agents and Evolution Strategies.h  CMakeCache.txt  CMakeLists.txt  Evolutionary_Minority_Game.cpp  Evolutionary_Minority_Game.h  Evolutionary_Minority_Game_Test.cpp  High_Res predict Variance for Memory from 2 to 16, Pop from 101 to 701, and 1000 Iterations.txt  Intermediary_Function_Tests.cpp  Intermediary_Function_Tests.h  Makefile  Market History for 301 N, 15 m, 2 s, 500 runs.txt  Market History for 301 N, 3 m, 2 s, 500 runs.txt  Market History for 301 N, 7 m, 2 s, 500 runs.txt  Market History for m=15, s=2, N=301, 1000 Iterations.txt  Market History for m=15, s=2, N=301, 10000 Iterations.txt  Market History for m=3, s=2, N=301, 1000 Iterations.txt  Memory Distribution.txt  Minority_Game_Programming.cbp  Minority_Game_Utilities.cpp  Minority_Game_Utilities.h  README.md  Scratch_File.cpp  Simulation_Functions.cpp  Simulation_Functions.h  Sin RNG Variance for Memory from 2 to 16, Pop from 101 to 701, and 5000 Iterations.txt  analysis_utilities.h  cmake_install.cmake  debug_utilities.h  desktop.ini  gnu default setup  main.cpp
Data/Memory evolution Observables/Evolution Through Time/: Mem Evo with runs = 10036.txt  Mem Evo with runs = 12037.txt  Mem Evo with runs = 14038.txt  Mem Evo with runs = 16039.txt  Mem Evo with runs = 18040.txt  Mem Evo with runs = 2032.txt  Mem Evo with runs = 4033.txt  Mem Evo with runs = 6034.txt  Mem Evo with runs = 8035.txt  gnuplot.docx  (+9 more)
Minority Game Programming/: CMakeLists.txt  EMG_API.cpp  Evolutionary_Minority_Game_Functions.h  Pseudo Code.docx  main.cpp
Test Project/: CMakeLists.txt  README.md  main.cpp
docs/: Code Walk Through.docx
(+126 files in other folders)
